# Anime-roleplay

./: .env.example  .gitignore  CLAUDE.md  README.md  dev.sh  pyproject.toml
backend/: character.py  history.py  llm.py  lorebook.py  main.py  media_proxy.py  openai_compat.py  prompt_builder.py  rag.py  summarize.py  tts.py  youtube_audio.py
data/characters/: 5177a49b.json  8bdb1e92.json  demo01.json
data/chats/char-1772708945517/: chat-1780174935814.json
data/chats/char-1780085628519/: chat-1780085635302.json
docs/: BUILD-NOTES-frontend.md  SPEC-frontend.md
frontend/: index.html
frontend-next/: index.html  package-lock.json  package.json  vite.config.js
frontend-next/src/: App.jsx  index.css
frontend-next/src/components/: Avatar.jsx  CharacterCard.jsx  CharacterEditor.jsx  CharacterWizard.jsx  ChatMessage.jsx  ChatView.jsx  CommandPalette.jsx  FeaturedBanner.jsx  MemoriesModal.jsx  ParticleField.jsx  PersonaModal.jsx  Scenes.jsx  SettingsModal.jsx  TutorialModal.jsx  icons.jsx
frontend-next/src/hooks/: useChatScroll.js  useLibrary.js  useMusic.js  useSuggestions.js  useTts.js
frontend-next/src/lib/: aigen.js  api.js  chat.js  db.js  design.js  energy.js  face.js  format.js  io.js  media.js  memory.js  tts.js  (+11 more)
my-frontend/: README.md  emerald-theme.css  help.html  index.html  privacy & terms.html  script.js  script.js.backup  style.css
my-frontend/js/: ai-gen.js  cards.js  characters.js  chat.js  dialogs.js  editor.js  effects.js  groups.js  io.js  main.js  media.js  personas.js  settings.js  state.js  storage.js  tutorial.js  ui-helpers.js  utils.js
