[project]
name = "roleplay-bot"
version = "0.1.0"
description = "Local character roleplay chatbot — FastAPI + Ollama"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "yt-dlp>=2024.0",
    "kokoro-onnx>=0.4",
    "soundfile>=0.12",
]

[tool.uv]
# dev-зависимости можно добавить позже: pytest, ruff и т.д.
